# D-router

./: .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  package.sh  run.sh
.github/workflows/: ci.yml
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/DSP/: MultiChannelPluginHost.cpp  MultiChannelPluginHost.h  MultiChannelPluginHost.mm  PluginHost.cpp  PluginHost.h  PluginHost.mm  SafePluginOps.h  SafePluginOps.mm
Source/DSP/Builtin/: BuiltinProcessors.h  ChannelStripEditor.h  CompressorEditor.h  DeEsserEditor.h  InternalPluginFormat.cpp  InternalPluginFormat.h  LevelRiderEditor.h  MultibandCompEditor.h  ParametricEqEditor.h  PpmMeterEditor.h  PpmMeterProcessor.h  ResonanceMath.h  ResonanceSuppressorEditor.h  ResonanceSuppressorProcessor.h  SpectralAutoEqEditor.h  SpectralAutoEqProcessor.h  SpectralCurveEditor.h  SpectralNodeMath.h  SpectralProcessor.h
Source/Diagnostics/: CrashHandler.h  CrashHandler.mm  Logger.cpp  Logger.h  PerfMonitor.cpp  PerfMonitor.h
Source/Engine/: AudioEngine.cpp  AudioEngine.h  DeviceWorker.cpp  DeviceWorker.h  EngineSettings.h  MatrixProcessor.cpp  MatrixProcessor.h  PdcDelayLine.h  PdcPlan.h  ReconfigurationController.h  RingBuffer.h  SampleRateConverter.cpp  SampleRateConverter.h  WorkerPool.cpp  WorkerPool.h
Source/Persistence/: AtomicXmlWrite.cpp  AtomicXmlWrite.h  CrashGuard.cpp  CrashGuard.h  SettingsStore.cpp  SettingsStore.h  SnapshotStore.cpp  SnapshotStore.h
Source/Routing/: GroupGain.h  InputGroupManager.cpp  InputGroupManager.h  OutputGroup.h  OutputGroupManager.cpp  OutputGroupManager.h  PanicController.cpp  PanicController.h  RoutingMatrix.cpp  RoutingMatrix.h
Source/UI/: Crosspoint.cpp  Crosspoint.h  CrosspointGrid.cpp  CrosspointGrid.h  DeviceManagerDialog.cpp  DeviceManagerDialog.h  DragSlotButton.h  GroupManagerDialog.cpp  GroupManagerDialog.h  LevelMeter.cpp  LevelMeter.h  LoadingOverlay.cpp  LoadingOverlay.h  LogViewerDialog.cpp  LogViewerDialog.h  LookAndFeel.cpp  LookAndFeel.h  MatrixView.cpp  MatrixView.h  OutputGroupPanel.cpp  OutputGroupPanel.h  PanelHost.cpp  PanelHost.h  PluginBrowserDialog.cpp  PluginBrowserDialog.h  PluginEditorWindow.cpp  PluginEditorWindow.h  PluginEditorWindow.mm  SettingsDialog.cpp  SettingsDialog.h  StatusPanel.cpp  StatusPanel.h
Source/Update/: UpdateChecker.cpp  UpdateChecker.h  UpdateInstaller.cpp  UpdateInstaller.h  UpdatePrompt.h  Version.h
docs/superpowers/plans/: 2026-06-20-phase-a-scaffolding.md  2026-06-21-phase-b-fragiles.md  2026-06-21-phase-c1-panic-controller.md  2026-06-21-phase-c2-c5-record.md
docs/superpowers/specs/: 2026-06-20-drouter-overhaul-design.md  2026-06-21-group-fader-router-mode-design.md
tests/: CoreLogicTests.cpp  test_main.cpp
tests/juce/: AtomicXmlWriteTests.cpp  CrashHandlerTests.cpp  ReconfigurationControllerTests.cpp  SettingsStoreTests.cpp  SnapshotStoreTests.cpp  TestMainJuce.cpp
